# WorkflowKit

./: .gitignore  AUDIT_SUMMARY.md  PROJECT_AUDIT_REPORT.md  README.md  backup.cmd  backup.ps1  config.toml  setup.cmd  setup.ps1  start.ps1  test_input.txt  version.cmd  version.ps1
PROJECT/: DEBUG_PROTOCOL.md  README.md  constraints.lock.txt  pyproject.toml  requirements.txt  sitecustomize.py  test_debug_protocol.py
PROJECT/scripts/: refresh_lock.ps1
PROJECT/src/shinon_os/: __init__.py  __main__.py  app.py  app_service.py  i18n.py  view_models.py
PROJECT/src/shinon_os/cli/: __init__.py  io.py  render.py
PROJECT/src/shinon_os/core/: __init__.py  formatting.py  intents.py  kernel.py  memory.py  phrasebank.py  types.py
PROJECT/src/shinon_os/data/: __init__.py  de.json  (+9 more)
PROJECT/tests/: test_actions_advance_once.py  test_animation_flags.py  test_architecture_imports.py  test_boot_sequence_fixed.py  test_boot_sequence_validation.py  test_chat_ambiguous_no_execute.py  test_chat_intent_auto_execute.py  test_chat_invalid_params_safe.py  test_chat_view_requests_no_advance.py  test_command_compatibility.py  test_crash_suite.py  test_determinism.py  test_fresh_system_state_persistence.py  test_i18n_locale.py  test_menu_always_available.py  test_migrations.py  test_no_scroll_contract.py  test_runtime_no_workflow_dependency.py  test_transcript_written_on_error.py  test_transcript_written_on_quit.py  test_ui_mode_selection.py  test_unimplemented_feature_returns_hint.py  test_unlocks_and_collapse.py  test_validation.py  test_view_models_complete.py  test_views_no_advance.py
(+65 files in other folders)
